# secure-sudoers

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  POLICY.md  README.md  deny.toml  improvements.md  run_privileged_tests.sh  wazuh_proposed_integration.md
.github/: dependabot.yml
.github/workflows/: build-and-test.yml  codeql.yml  lint-pr-title.yml  publish.yml  security-scan.yml
crates/secure-sudoers/: Cargo.toml  secure-sudoers.1
crates/secure-sudoers-common/: Cargo.toml
crates/secure-sudoers-common/src/: error.rs  fs.rs  lib.rs  logging.rs  models.rs  telemetry.rs  testing.rs  util.rs  validator.rs
crates/secure-sudoers-common/src/validator/: helpers.rs
crates/secure-sudoers-common/tests/: policy_integration.rs
crates/secure-sudoers-utils/: Cargo.toml  secure-sudoers-utils.1
crates/secure-sudoers-utils/src/: lib.rs  main.rs  modules.rs
crates/secure-sudoers-utils/src/modules/: installer.rs  keys.rs  network.rs
crates/secure-sudoers-utils/tests/: check_integration.rs  utils_integration.rs
crates/secure-sudoers/src/: exec.rs  helpers.rs  isolation.rs  lib.rs  main.rs  supervisor.rs  testing.rs
crates/secure-sudoers/tests/: binary_e2e.rs  gatekeeper_integration.rs
src/: bin_utils.rs  exec.rs  isolation.rs  lib.rs  logging.rs  main.rs  models.rs  supervisor.rs  validator.rs
tests/: Dockerfile  e2e_full_user_path.bats  run_privileged_tests.sh
