[package]
name = "secure-sudoers"
version = "0.1.0"
edition = "2021"
description = "A memory-safe, high-security gatekeeper for sudo. Enforces strict JSON policies, isolates processes via Linux Namespaces, and prevents TOCTOU attacks."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
libc = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "json", "registry"], default-features = false }
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
clap = { version = "4.5", features = ["derive", "std", "help", "usage", "error-context"], default-features = false }
# rand 0.8 uses rand_core 0.6, which is compatible with ed25519-dalek 2.x.
rand = "0.8"
# reqwest and tempfile are only needed for the `update` subcommand of
# secure-sudoers-utils.  Gating them behind a feature prevents pulling in
# tokio/TLS on platforms without the required linker tools (e.g. GNU Windows).
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false, optional = true }
tempfile = { version = "3", optional = true }

[features]
default = []
# Enable with: cargo build --features network-update -p secure-sudoers
network-update = ["dep:reqwest", "dep:tempfile"]

[[bin]]
name = "secure-sudoers"
path = "src/main.rs"

[[bin]]
name = "secure-sudoers-utils"
path = "src/bin_utils.rs"

# nix is only needed (and only compiles fully) on Linux.
# The sched and mount modules are Linux-specific kernel interfaces.
[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["sched", "mount", "process", "term", "signal", "poll"] }
syslog = "7.0"

# ── Debian packaging ──────────────────────────────────────────────────────────
[package.metadata.deb]
maintainer = "Secure Sudoers Contributors <security@example.com>"
copyright = "2024, Secure Sudoers Contributors"
license-file = ["LICENSE", "0"]
extended-description = """\
A memory-safe, policy-driven sudo delegation framework written in Rust. \
Enforces JSON-defined command policies, isolates child processes via Linux \
Namespaces and capability dropping, and prevents TOCTOU attacks via fexecve.\
"""
depends = "$auto"
section = "admin"
priority = "optional"
assets = [
    ["target/release/secure-sudoers",       "usr/local/bin/", "0755"],
    ["target/release/secure-sudoers-utils", "usr/local/bin/", "0755"],
]
