[workspace]
members = [
    "crates/secure-sudoers-common",
    "crates/secure-sudoers",
    "crates/secure-sudoers-utils",
]
resolver = "2"

[workspace.package]
edition = "2024"
authors = ["Thomas Shephard"]
license = "MIT"
version = "0.1.0"
description = "A memory-safe, high-security gatekeeper for sudo."
