[package]
name = "secure-sudoers-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Common logic for secure-sudoers (models, validator, logging)"

[features]
default = []
testing = []

[dependencies]
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "json", "registry"], default-features = false }
syslog = "7.0.0"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
proptest = "1"
