[package]
name = "secure-sudoers-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Policy key management and distribution for secure-sudoers"

[[bin]]
name = "secure-sudoers-utils"
path = "src/main.rs"

[features]
default = []
network-update = ["dep:reqwest"]

[dependencies]
secure-sudoers-common = { path = "../secure-sudoers-common" }
clap = { version = "4.6", features = ["derive", "std", "help", "usage", "error-context"], default-features = false }
clap_mangen = "0.2"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
serde_json = "1.0"
libc = "0.2"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false, optional = true }
tempfile = "3.26"

[dev-dependencies]
secure-sudoers-common = { path = "../secure-sudoers-common", features = ["testing"] }

[target.'cfg(target_os = "linux")'.dependencies]
syslog = "7.0.0"
