[package]
name = "secure-sudoers"
version = "0.1.0"
edition = "2024"
description = "A memory-safe, high-security gatekeeper for sudo."

[[bin]]
name = "secure-sudoers"
path = "src/main.rs"

[dependencies]
secure-sudoers-common = { path = "../secure-sudoers-common" }
libc = "0.2"
tracing = "0.1"
serde_json = "1.0"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }

[dev-dependencies]
secure-sudoers-common = { path = "../secure-sudoers-common", features = ["testing"] }
tempfile = "3"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.31", features = ["sched", "mount", "process", "term", "signal", "poll"] }
