[package]
name = "secure-sudoers"
version = "0.1.0"
edition = "2024"
description = "A memory-safe, high-security gatekeeper for sudo."

[[bin]]
name = "secure-sudoers"
path = "src/main.rs"

[dependencies]
secure-sudoers-common = { path = "../secure-sudoers-common" }
libc = "0.2"
tracing = "0.1"
serde_json = "1.0"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
secure-sudoers-common = { path = "../secure-sudoers-common", features = ["testing"] }
tempfile = "3"
assert_cmd = "2"
predicates = "3"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.31", features = ["sched", "mount", "process", "term", "signal", "poll", "user"] }

[package.metadata.deb]
maintainer = "Thomas Shephard"
copyright = "2026, Thomas Shephard"
license-file = "../../LICENSE"
extended-description = "A policy-driven sudo delegation framework."
depends = "$auto"
section = "admin"
priority = "optional"
assets = [
    ["target/release/secure-sudoers", "usr/local/bin/", "0755"],
    ["target/release/secure-sudoers-utils", "usr/local/bin/", "0755"],
    ["secure-sudoers.1", "usr/share/man/man1/", "0644"],
    ["../secure-sudoers-utils/secure-sudoers-utils.1", "usr/share/man/man1/", "0644"],
]
